--- a/KineApp.csproj
+++ b/KineApp.csproj
@@ -85,6 +85,9 @@
     <MauiXaml Update="View\SintomaPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </MauiXaml>
+    <MauiXaml Update="View\TurnosPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
   </ItemGroup>
 
   <ItemGroup>
